[FIX] - Model Mapper error
Account class의 userId 필드명을 userIdentifier로 수정

--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -34,11 +34,11 @@
                                 <tbody>
                                     <tr>
                                         <th scope="row">
-                                            <label th:for="*{userId}">아이디 <span>*</span></label>
+                                            <label th:for="*{userIdentifier}">아이디 <span>*</span></label>
                                         </th>
                                         <td>
                                             <div class="id_input_box">
-                                                <input class="id_input" th:field="*{userId}" type="text" minlength="5"
+                                                <input class="id_input" th:field="*{userIdentifier}" type="text" minlength="5"
                                                     maxlength="20">
                                                 (영문 소문자/숫자, 5~20자)
                                             </div>
