[FEAT] - 비밀번호 찾기 기능 추가

--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -77,11 +77,11 @@
                                     </tr>
                                     <tr>
                                         <th scope="row">
-                                            <label th:for="*{nickname}">닉네임 <span>*</span></label>
+                                            <label th:for="*{name}">이름 <span>*</span></label>
                                         </th>
                                         <td>
                                             <div class="nickname_input_box">
-                                                <input class="nickname_input" th:field="*{nickname}" type="text">
+                                                <input class="nickname_input" th:field="*{name}" type="text">
                                             </div>
                                             <span class="final_nickname_ck text-danger">이름을 입력해주세요.</span>
                                         </td>
