--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -42,7 +42,7 @@
                                 <a target="_blank" href="index.html">아이디 찾기</a>
                             </div>
                             <div class="txt">
-                                <a target="_blank" href="index.html">비밀번호 찾기</a>
+                                <a th:href="@{/find-pass}">비밀번호 찾기</a>
                             </div>
                             <div class="txt">
                                 <a target="_blank" href="index.html">주문조회</a>
