--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="login_find">
                             <div class="txt">
-                                <a target="_blank" href="index.html">아이디 찾기</a>
+                                <a th:href="@{/find-id}">아이디 찾기</a>
                             </div>
                             <div class="txt">
                                 <a th:href="@{/find-pass}">비밀번호 찾기</a>
