--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -22,7 +22,7 @@
                         <h2>Modify</h2>
                         <div class="divider"></div>
                     </div>
-                    <div th:if="${message}" class="alert alert-success alert-dismissible fade show">
+                    <div th:if="${message}" class="message_box alert alert-success alert-dismissible fade show">
                         <i class="xi-check-min me-2"></i><span style="font-size: 14px;" th:text="${message}">메시지</span>
                         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                     </div>
