--- a/src/main/resources/static/css/profile.scss
+++ b/src/main/resources/static/css/profile.scss
@@ -20,7 +20,7 @@ main {
                     }
                 }
 
-                .alert {
+                .message_box {
                     width: 80%;
                     margin: 45px auto 15px;
                 }
