--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
                         <div class="row g-2">
                             <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
                                 <a href="item.html">
-                                    <img src="imgs/1.jpg" class="img-fluid" alt="">
+                                    <img src="images/1.jpg" class="img-fluid" alt="">
                                 </a>
                                 <div class="desc">
                                     <div class="name">
@@ -42,7 +42,7 @@
                             </div>
                             <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
                                 <a href="item.html">
-                                    <img src="imgs/2.jpg" class="img-fluid" alt="">
+                                    <img src="images/2.jpg" class="img-fluid" alt="">
                                 </a>
                                 <div class="desc">
                                     <div class="name">
@@ -55,7 +55,7 @@
                             </div>
                             <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
                                 <a href="item.html">
-                                    <img src="imgs/3.jpg" class="img-fluid" alt="">
+                                    <img src="images/3.jpg" class="img-fluid" alt="">
                                 </a>
                                 <div class="desc">
                                     <div class="name">
@@ -68,7 +68,7 @@
                             </div>
                             <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
                                 <a href="item.html">
-                                    <img src="imgs/4.jpg" class="img-fluid" alt="">
+                                    <img src="images/4.jpg" class="img-fluid" alt="">
                                 </a>
                                 <div class="desc">
                                     <div class="name">
@@ -81,7 +81,7 @@
                             </div>
                             <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
                                 <a href="item.html">
-                                    <img src="imgs/5.jpg" class="img-fluid" alt="">
+                                    <img src="images/5.jpg" class="img-fluid" alt="">
                                 </a>
                                 <div class="desc">
                                     <div class="name">
@@ -94,7 +94,7 @@
                             </div>
                             <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
                                 <a href="item.html">
-                                    <img src="imgs/6.jpg" class="img-fluid" alt="">
+                                    <img src="images/6.jpg" class="img-fluid" alt="">
                                 </a>
                                 <div class="desc">
                                     <div class="name">
@@ -107,7 +107,7 @@
                             </div>
                             <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
                                 <a href="item.html">
-                                    <img src="imgs/7.jpg" class="img-fluid" alt="">
+                                    <img src="images/7.jpg" class="img-fluid" alt="">
                                 </a>
                                 <div class="desc">
                                     <div class="name">
@@ -120,7 +120,7 @@
                             </div>
                             <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
                                 <a href="item.html">
-                                    <img src="imgs/8.jpg" class="img-fluid" alt="">
+                                    <img src="images/8.jpg" class="img-fluid" alt="">
                                 </a>
                                 <div class="desc">
                                     <div class="name">
