--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -45,7 +45,7 @@
                                 <a th:href="@{/find-pass}">비밀번호 찾기</a>
                             </div>
                             <div class="txt">
-                                <a target="_blank" href="index.html">주문조회</a>
+                                <a target="_blank" href="main.html">주문조회</a>
                             </div>
                             <div class="join_txt">
                                 <a target="_blank" th:href="@{sign-up}">회원가입</a>
