--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -27,7 +27,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                     </div>
                     <div class="modify_body mt-5">
-                        <form id="profileForm" th:action="@{/settings/profile}" th:object="${profileForm}" method="post"
+                        <form id="profileDto" th:action="@{/settings/profile}" th:object="${profileDto}" method="post"
                             onsubmit="return chkPW()">
                             <table>
                                 <colgroup>
@@ -221,8 +221,8 @@
 
                 /* 최종 유효성 검사 */
                 if (pwCheck && pwckCheck && pwckcorCheck && mailCheck && mailnumCheck && nicknameCheck && addressCheck) {
-                    $('#profileForm').attr("action", "/settings/profile");
-                    $('#profileForm').submit();
+                    $('#profileDto').attr("action", "/settings/profile");
+                    $('#profileDto').submit();
                 } else if (!mailnumCheck) {
                     $('.need_mail_check').css('display', 'inline-block');
                 }
