--- a/src/main/resources/templates/account/find-id.html
+++ b/src/main/resources/templates/account/find-id.html
@@ -2,18 +2,18 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-    <div th:replace="fragments.html :: head"></div>
+    <div th:replace="/fragments/fragments.html :: head"></div>
     <!--  사용자 CSS -->
-    <link rel="stylesheet" href="css/find-id.css">
+    <link rel="stylesheet" href="/css/find-id.css">
 </head>
 
 <body>
 
 <main>
-    <div th:replace="fragments.html :: sidebar"></div>
+    <div th:replace="/fragments/fragments.html :: sidebar"></div>
 
     <article class="content">
-        <div th:replace="fragments.html :: nav"></div>
+        <div th:replace="/fragments/fragments.html :: nav"></div>
 
         <!-- signup section -->
         <section id="find_id">
@@ -72,12 +72,12 @@
             </div>
         </section>
 
-        <div th:replace="fragments.html :: footer"></div>
+        <div th:replace="/fragments/fragments.html :: footer"></div>
     </article>
 </main>
 
-<div th:replace="fragments.html :: JS"></div>
-<div th:replace="fragments.html :: csrf"></div>
+<div th:replace="/fragments/fragments.html :: JS"></div>
+<div th:replace="/fragments/fragments.html :: csrf"></div>
 
 <!-- 사용자 JS -->
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
@@ -88,7 +88,7 @@
 
         $.ajax({
             type: "post",
-            url: "/find-id",
+            url: "/find/id",
             data: {
                 "email": email,
                 "name": name
