--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-    <div th:replace="fragments.html :: head"></div>
+    <div th:replace="/fragments/fragments.html :: head"></div>
     <!--  사용자 CSS -->
     <link rel="stylesheet" href="css/sign-up.css">
 </head>
@@ -10,10 +10,10 @@
 <body>
 
     <main>
-        <div th:replace="fragments.html :: sidebar"></div>
+        <div th:replace="/fragments/fragments.html :: sidebar"></div>
 
         <article class="content">
-            <div th:replace="fragments.html :: nav"></div>
+            <div th:replace="/fragments/fragments.html :: nav"></div>
 
             <!-- signup section -->
             <section id="signup">
@@ -130,12 +130,12 @@
                 </div>
             </section>
 
-            <div th:replace="fragments.html :: footer"></div>
+            <div th:replace="/fragments/fragments.html :: footer"></div>
         </article>
     </main>
 
-    <div th:replace="fragments.html :: JS"></div>
-    <div th:replace="fragments.html :: csrf"></div>
+    <div th:replace="/fragments/fragments.html :: JS"></div>
+    <div th:replace="/fragments/fragments.html :: csrf"></div>
 
     <!-- 사용자 JS -->
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
@@ -248,7 +248,7 @@
 
             $.ajax({
                 type: "POST",
-                url: "/check-id",
+                url: "/check/id",
                 data: data,
                 success: function (result) {
                     if (result !== 'fail' && userId.length > 4) {
@@ -339,7 +339,7 @@
             // 이메일 중복 체크 및 이메일 전송
             $.ajax({
                 type: "GET",
-                url: "/check-email?email=" + email,
+                url: "/check/email?email=" + email,
                 success: function (data) {
                     alert("인증번호가 발송되었습니다.");
                     check_input.attr("disabled", false);
