--- a/src/main/resources/templates/account/signUp.html
+++ b/src/main/resources/templates/account/signUp.html
@@ -14,18 +14,15 @@
             <div th:replace="/layouts/defaultLayout.html :: nav"></div>
 
             <!-- signup section -->
-            <section id="modify">
-                <div class="container modify">
-                    <div class="modify_header">
-                        <h2>Modify</h2>
+            <section id="signup">
+                <div class="container signup">
+                    <div class="signup_header">
+                        <h2>SIGNUP</h2>
                         <div class="divider"></div>
                     </div>
-                    <div th:if="${message}" class="message_box alert alert-success alert-dismissible fade show">
-                        <i class="xi-check-min me-2"></i><span style="font-size: 14px;" th:text="${message}">메시지</span>
-                        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-                    </div>
-                    <div class="modify_body mt-5">
-                        <form id="profileFormDto" th:action="@{/account/profile}" th:object="${profileFormDto}" method="post"
+                    <div class="signup_body mt-5">
+
+                        <form id="signUpFormDto" th:action="@{/signUp}" th:object="${signUpFormDto}" method="post"
                             onsubmit="return chkPW()">
                             <table>
                                 <colgroup>
@@ -39,8 +36,8 @@
                                         </th>
                                         <td>
                                             <div class="id_input_box">
-                                                <input class="id_input" th:field="*{userIdentifier}" th:value="${account.getUserIdentifier()}" type="text" minlength="5"
-                                                       maxlength="20" readonly="readonly">
+                                                <input class="id_input" th:field="*{userIdentifier}" type="text" minlength="5"
+                                                    maxlength="20">
                                                 (영문 소문자/숫자, 5~20자)
                                             </div>
                                             <span class="id_input_re_1 text-success">사용 가능한 아이디입니다.</span>
@@ -93,7 +90,7 @@
                                         </th>
                                         <td>
                                             <div class="mail_input_box mb-1">
-                                                <input  class="mail_input" th:field="*{email}" type="email">
+                                                <input class="mail_input" th:field="*{email}" type="email">
                                             </div>
                                             <div class="mail_check_box">
                                                 <input class="mail_check_input" disabled="disabled">
@@ -103,7 +100,6 @@
                                             <span class="mail_input_re_1 text-success">사용 가능한 이메일입니다.</span>
                                             <span class="mail_input_re_2 text-danger">이메일이 이미 존재합니다.</span>
                                             <span class="final_mail_ck text-danger">이메일을 입력해주세요.</span>
-                                            <span class="need_mail_check text-danger">이메일 인증이 필요합니다.</span>
                                         </td>
                                     </tr>
                                     <tr>
@@ -121,13 +117,11 @@
                                                 readonly="readonly">
                                             <span class="final_addr_ck text-danger">주소를 입력해주세요.</span>
                                         </td>
-
                                     </tr>
                                 </tbody>
                             </table>
                             <div class="btn_box">
-                                <button class="modify_btn black_btn" type="submit">회원정보수정</button>
-                                <a class="white_btn" th:href="@{/static}">취소</a>
+                                <button class="signup_btn black_btn" type="submit">회원가입</button>
                             </div>
                         </form>
                     </div>
@@ -146,6 +140,8 @@
     <script>
 
         /* 유효성 검사 통과유무 변수 */
+        let idCheck = false;            // 아이디
+        let idckCheck = false;          // 아이디 중복 검사
         let pwCheck = false;            // 비번
         let pwckCheck = false;          // 비번 확인
         let pwckcorCheck = false;       // 비번 확인 일치 확인
@@ -155,18 +151,27 @@
         let addressCheck = false        // 주소
 
         let code = ""; // 이메일전송 인증번호 저장위한 변수
-        let before_email = $('.mail_input').val(); // 기존 이메일
 
         $(document).ready(function () {
-            //회원정보수정 버튼(회원정보수정 기능 작동)
-            $(".modify_btn").click(function () {
+            //회원가입 버튼(회원가입 기능 작동)
+            $(".signup_btn").click(function () {
 
                 /* 입력값 변수 */
+                let id = $('.id_input').val(); // id 입력란
                 let pw = $('.pw_input').val(); // 비밀번호 입력란
                 let pwck = $('.pwck_input').val(); // 비밀번호 확인 입력란
                 let nickname = $('.nickname_input').val(); // 닉네임 입력란
                 let mail = $('.mail_input').val(); // 이메일 입력란
                 let address = $('.address_input_3').val(); // 주소 입력란
+
+                /* 아이디 유효성검사 */
+                if (id === "") {
+                    $('.final_id_ck').css('display', 'inline-block')
+                    idCheck = false;
+                } else {
+                    $('.final_id_ck').css('display', 'none')
+                    idCheck = true;
+                }
 
                 /* 비밀번호 유효성 검사 */
                 if (pw === "") {
@@ -204,29 +209,65 @@
                     mailCheck = true;
                 }
 
-                if (before_email === mail) {
-                    mailnumCheck = true;
-                }
-
                 /* 주소 유효성 검사 */
                 if (address === "") {
-                    $('.final_addr_ck').css('display', 'inline-block');
+                    $('.final_addr_ck').css('display', 'inline-block')
                     addressCheck = false;
                 } else {
-                    $('.final_addr_ck').css('display', 'none');
+                    $('.final_addr_ck').css('display', 'none')
                     addressCheck = true;
                 }
 
+                console.log(idCheck);
+                console.log(idckCheck);
+                console.log(pwCheck);
+                console.log(pwckCheck);
+                console.log(pwckcorCheck);
+                console.log(nicknameCheck);
+                console.log(mailCheck);
+                console.log(mailnumCheck);
+                console.log(addressCheck);
+
                 /* 최종 유효성 검사 */
-                if (pwCheck && pwckCheck && pwckcorCheck && mailCheck && mailnumCheck && nicknameCheck && addressCheck) {
-                    $('#profileFormDto').attr("action", "/account/profile");
-                    $('#profileFormDto').submit();
-                } else if (!mailnumCheck) {
-                    $('.need_mail_check').css('display', 'inline-block');
+                if (idCheck && idckCheck && pwCheck && pwckCheck && pwckcorCheck && nicknameCheck && mailCheck && mailnumCheck && addressCheck) {
+                    $('#signUpFormDto').attr("action", "/signUp");
+                    $('#signUpFormDto').submit();
                 }
                 return false;
             });
         });
+
+        //아이디 중복검사
+        $('.id_input').on("propertychange change keyup paste input", function () {
+            const userId = $('.id_input').val();
+            const data = { userId: userId }
+
+            console.log(data);
+
+            $.ajax({
+                type: "POST",
+                url: "/check/id",
+                data: data,
+                success: function (result) {
+                    if (result !== 'fail' && userId.length > 4) {
+                        $('.id_input_re_1').css("display", "inline-block");
+                        $('.id_input_re_2').css("display", "none");
+                        $('.final_id_ck').css("display", "none");
+                        idckCheck = true;
+                    } else if (result === 'fail' && userId.length > 4) {
+                        $('.id_input_re_2').css("display", "inline-block");
+                        $('.id_input_re_1').css("display", "none");
+                        $('.final_id_ck').css("display", "none");
+                        idckCheck = false;
+                    } else {
+                        $('.id_input_re_1').css("display", "none");
+                        $('.id_input_re_2').css("display", "none");
+                        $('.final_id_ck').css("display", "none");
+                        idckCheck = false;
+                    }
+                }
+            })
+        })
 
         /* 비밀번호 확인 일치 유효성 검사 */
         $('.pwck_input').on("propertychange change keyup paste input", function () {
@@ -293,6 +334,7 @@
             let send_btn = $(".send_mail"); // 인증 번호 전송 버튼
             let check_btn = $(".check_number"); // 인증 번호 확인 버튼
 
+            // 이메일 중복 체크 및 이메일 전송
             $.ajax({
                 type: "GET",
                 url: "/check/email?email=" + email,
@@ -305,6 +347,8 @@
                     code = data;
                 }
             })
+
+
         })
 
         // 인증 번호 일치 여부
@@ -312,17 +356,14 @@
             let check_input = $(".mail_check_input"); // 인증 번호 입력란
             let input_code = $(".mail_check_input").val(); // 사용자가 입력한 인증 번호
             let check_result = $(".mail_input_warn"); // 비교 결과
-            let need_mail_check = $(".need_mail_check");
 
             if (input_code === code) {
                 alert("인증되었습니다.");
                 check_input.attr("disabled", true);
                 check_input.css("background-color", "#fafafa");
-                need_mail_check.css("display", "none");
                 mailnumCheck = true;
             } else {
                 alert("인증번호를 다시 확인해주세요.");
-                need_mail_check.css("display", "none");
                 mailnumCheck = false;
             }
         }
@@ -379,6 +420,5 @@
                 }
             }).open();
         }
-
     </script>
 </body>
