--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,148 +1,143 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head>
-    <div th:replace="/fragments/fragments.html :: head"></div>
-    <!--  사용자 CSS -->
-    <link rel="stylesheet" href="css/index.css">
+    <div th:replace="/layouts/defaultLayout.html :: head"></div>
 </head>
+
 <body>
 
-<main>
-    <div th:replace="/fragments/fragments.html :: sidebar"></div>
+    <main>
+        <div th:replace="/layouts/defaultLayout.html :: sidebar"></div>
 
-    <article class="content">
-        <div th:replace="/fragments/fragments.html :: nav"></div>
+        <article class="content">
+            <div th:replace="/layouts/defaultLayout.html :: nav"></div>
 
-        <!-- items section -->
-        <section id="items">
-            <div class="section_content">
-                <div class="container-fluid items">
-<!--                    <div class="alert alert-warning" role="alert" th:if="${account != null}">-->
-<!--                        account test-->
-<!--                    </div>-->
-                    <div class="items_header">
-                        <h2>ALL ITEMS</h2>
-                        <div class="divider"></div>
-                    </div>
-                    <div class="items_body">
-                        <div class="row g-2">
-                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                                <a href="item.html">
-                                    <img src="images/1.jpg" class="img-fluid" alt="">
-                                </a>
-                                <div class="desc">
-                                    <div class="name">
-                                        <a href="item.html">S. Raton Wool Jacket</a>
-                                    </div>
-                                    <div class="price">
-                                        <span>94,050원</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                                <a href="item.html">
-                                    <img src="images/2.jpg" class="img-fluid" alt="">
-                                </a>
-                                <div class="desc">
-                                    <div class="name">
-                                        <a href="item.html">S. Raton Wool Jacket</a>
-                                    </div>
-                                    <div class="price">
-                                        <span>94,050원</span>
+            <section id="items">
+                <div class="section_content">
+                    <div class="container-fluid items">
+                        <!--                    <div class="alert alert-warning" role="alert" th:if="${account != null}">-->
+                        <!--                        account test-->
+                        <!--                    </div>-->
+                        <div class="items_header">
+                            <h2>ALL ITEMS</h2>
+                            <div class="divider"></div>
+                        </div>
+                        <div class="items_body">
+                            <div class="row g-2">
+                                <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                    <a href="item.html">
+                                        <img src="images/1.jpg" class="img-fluid" alt="">
+                                    </a>
+                                    <div class="desc">
+                                        <div class="name">
+                                            <a href="item.html">S. Raton Wool Jacket</a>
+                                        </div>
+                                        <div class="price">
+                                            <span>94,050원</span>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                                <a href="item.html">
-                                    <img src="images/3.jpg" class="img-fluid" alt="">
-                                </a>
-                                <div class="desc">
-                                    <div class="name">
-                                        <a href="item.html">S. Raton Wool Jacket</a>
-                                    </div>
-                                    <div class="price">
-                                        <span>94,050원</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                                <a href="item.html">
-                                    <img src="images/4.jpg" class="img-fluid" alt="">
-                                </a>
-                                <div class="desc">
-                                    <div class="name">
-                                        <a href="item.html">S. Raton Wool Jacket</a>
-                                    </div>
-                                    <div class="price">
-                                        <span>94,050원</span>
+                                <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                    <a href="item.html">
+                                        <img src="images/2.jpg" class="img-fluid" alt="">
+                                    </a>
+                                    <div class="desc">
+                                        <div class="name">
+                                            <a href="item.html">S. Raton Wool Jacket</a>
+                                        </div>
+                                        <div class="price">
+                                            <span>94,050원</span>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                                <a href="item.html">
-                                    <img src="images/5.jpg" class="img-fluid" alt="">
-                                </a>
-                                <div class="desc">
-                                    <div class="name">
-                                        <a href="item.html">S. Raton Wool Jacket</a>
-                                    </div>
-                                    <div class="price">
-                                        <span>94,050원</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                                <a href="item.html">
-                                    <img src="images/6.jpg" class="img-fluid" alt="">
-                                </a>
-                                <div class="desc">
-                                    <div class="name">
-                                        <a href="item.html">S. Raton Wool Jacket</a>
-                                    </div>
-                                    <div class="price">
-                                        <span>94,050원</span>
+                                <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                    <a href="item.html">
+                                        <img src="images/3.jpg" class="img-fluid" alt="">
+                                    </a>
+                                    <div class="desc">
+                                        <div class="name">
+                                            <a href="item.html">S. Raton Wool Jacket</a>
+                                        </div>
+                                        <div class="price">
+                                            <span>94,050원</span>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                                <a href="item.html">
-                                    <img src="images/7.jpg" class="img-fluid" alt="">
-                                </a>
-                                <div class="desc">
-                                    <div class="name">
-                                        <a href="item.html">S. Raton Wool Jacket</a>
-                                    </div>
-                                    <div class="price">
-                                        <span>94,050원</span>
+                                <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                    <a href="item.html">
+                                        <img src="images/4.jpg" class="img-fluid" alt="">
+                                    </a>
+                                    <div class="desc">
+                                        <div class="name">
+                                            <a href="item.html">S. Raton Wool Jacket</a>
+                                        </div>
+                                        <div class="price">
+                                            <span>94,050원</span>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
-                                <a href="item.html">
-                                    <img src="images/8.jpg" class="img-fluid" alt="">
-                                </a>
-                                <div class="desc">
-                                    <div class="name">
-                                        <a href="item.html">S. Raton Wool Jacket</a>
+                                <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                    <a href="item.html">
+                                        <img src="images/5.jpg" class="img-fluid" alt="">
+                                    </a>
+                                    <div class="desc">
+                                        <div class="name">
+                                            <a href="item.html">S. Raton Wool Jacket</a>
+                                        </div>
+                                        <div class="price">
+                                            <span>94,050원</span>
+                                        </div>
                                     </div>
-                                    <div class="price">
-                                        <span>94,050원</span>
+                                </div>
+                                <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                    <a href="item.html">
+                                        <img src="images/6.jpg" class="img-fluid" alt="">
+                                    </a>
+                                    <div class="desc">
+                                        <div class="name">
+                                            <a href="item.html">S. Raton Wool Jacket</a>
+                                        </div>
+                                        <div class="price">
+                                            <span>94,050원</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                    <a href="item.html">
+                                        <img src="images/7.jpg" class="img-fluid" alt="">
+                                    </a>
+                                    <div class="desc">
+                                        <div class="name">
+                                            <a href="item.html">S. Raton Wool Jacket</a>
+                                        </div>
+                                        <div class="price">
+                                            <span>94,050원</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-lg-6 col-xl-4 img_box">
+                                    <a href="item.html">
+                                        <img src="images/8.jpg" class="img-fluid" alt="">
+                                    </a>
+                                    <div class="desc">
+                                        <div class="name">
+                                            <a href="item.html">S. Raton Wool Jacket</a>
+                                        </div>
+                                        <div class="price">
+                                            <span>94,050원</span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
-        <div th:replace="/fragments/fragments.html :: footer"></div>
-    </article>
-</main>
+            <div th:replace="/layouts/defaultLayout.html :: footer"></div>
+        </article>
+    </main>
 
-<div th:replace="/fragments/fragments.html :: JS"></div>
-
-<!-- 사용자 JS -->
-<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <div th:replace="/layouts/defaultLayout.html :: JS"></div>
 </body>
